code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__agent_run_grouped_plain_tool_name.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2115
expression: output
---
 +----------------------------------------------------------------------------+
 |                                 Every Code                                 |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 › Kick off QA bot regression run

   +- qa-bot
   |
   |  Run targeted regression suite
   |
   |  Agents
   |    • claude  running  (Xs)
   |
   |  Actions
   |   MM:SS  Started agent run for qa-bot
   |
   +- [Ctrl+A] Expand · [Esc] Stop

  • Working (Xs • esc to interrupt)

 +----------------------------- ✶ Responding... MM:SS -----------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
